# audio2ay2

./: .gitignore  README.md  pyproject.toml
design/: ARCHITECTURE.md  AY_REFERENCE.md  LOSS.md  PLAN.md  ROADMAP.md
src/audio2ay/: __init__.py  cli.py  config.py  pipeline.py
src/audio2ay/analysis/: chroma.py  feature_extractor.py  salience.py
src/audio2ay/ay/: __init__.py  renderer.py  timing.py
src/audio2ay/candidate/: behaviors.py  generator.py
src/audio2ay/export/: compression.py  register_stream.py  ym.py
src/audio2ay/optimizer/: __init__.py  interfaces.py  multistart.py  temporal.py
src/audio2ay/optimizer/strategies/: __init__.py  beam_search.py
src/audio2ay/preview/: render.py
src/audio2ay/report/: __init__.py  history.py  landscape.py  validate.py
src/audio2ay/similarity/: __init__.py  loss.py  mel.py
src/audio2ay2/: __init__.py  audioio.py  cli.py  config.py  pipeline.py
src/audio2ay2/analysis/: __init__.py  loudness.py  onset_detector.py  stem_separator.py
src/audio2ay2/ay/: emulator.py  registers.py  renderer.py
src/audio2ay2/candidate/: __init__.py  heuristics.py
src/audio2ay2/export/: __init__.py  psg.py  ym.py
src/audio2ay2/optimizer/: evaluator.py  moves.py  multistart.py  pyramid.py  stabilize.py
src/audio2ay2/optimizer/strategies/: __init__.py  genetic.py  local_search.py  simulated_annealing.py
src/audio2ay2/preview/: __init__.py
src/audio2ay2/similarity/: chroma.py  psychoacoustic.py
tests/: test_emulator.py  test_export.py  test_pipeline.py
