[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audio2ay2"
version = "0.1.0"
description = "Convert instrumental audio into AY-3-8910 register streams via analysis-by-synthesis."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "librosa>=0.10",
    "soundfile>=0.12",
    "matplotlib>=3.8",
    "tqdm>=4.65",
]

[project.optional-dependencies]
stems = ["demucs>=4.0"]
ml = ["torch>=2.1"]
dev = ["pytest>=7.4"]

[project.scripts]
audio2ay2 = "audio2ay2.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
